# weather-station-NillerP

./: README.md
Arduino/: platformio.ini
Arduino/src/: main.cpp
Mqqt-client/: CMakeLists.txt
Mqqt-client/src/: main.cpp
vejrdataWeb/: package-lock.json  package.json
vejrdataWeb/prisma/: schema.prisma
vejrdataWeb/src/pages/: index.jsx
vejrdataWeb/src/pages/api/: vejrdata.js
vejrdataWeb/src/styles/: globals.css
